--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -372,7 +372,7 @@
 
                     <div class="length_row large border_top flex_hide" data-length-row="output">
                         <div class="title_wrapper">
-                            <div class="length_row_segment">Output Length - <span class="inline_ratio">100%</span></div>
+                            <div class="length_row_segment">Output Length - <span class="inline_ratio" data-inline_ratio="output">100%</span></div>
                         </div>
                         <div class="input_wrapper">
                             <button class="padlock_btn btn_round" data-padlock="output">
@@ -400,7 +400,7 @@
 
                     <div class="length_row large border_top flex_hide" data-length-row="center">
                         <div class="title_wrapper">
-                            <div class="length_row_segment">Center Length - <span class="inline_ratio">1%</span></div>
+                            <div class="length_row_segment">Center Length - <span class="inline_ratio" data-inline_ratio="center">100%</span></div>
                         </div>
                         <div class="input_wrapper">
                             <button class="padlock_btn btn_round" data-padlock="center">
@@ -427,7 +427,7 @@
 
                     <div class="length_row large border_top flex_hide" data-length-row="input">
                         <div class="title_wrapper">
-                            <div class="length_row_segment">Input Length</div>
+                            <div class="length_row_segment">Input Length - <span class="inline_ratio" data-inline_ratio="input">100%</span></div>
                         </div>
                         <div class="input_wrapper">
                             <button class="padlock_btn btn_round" data-padlock="input">
