--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -374,6 +374,7 @@
                         <div class="title_wrapper">
                             <div class="length_row_segment">Output Length - <span class="inline_ratio" data-inline_ratio="output">100%</span></div>
                         </div>
+                        <div class="length_feet">(10 ft)</div>
                         <div class="input_wrapper">
                             <button class="padlock_btn btn_round" data-padlock="output">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -386,7 +387,6 @@
                             </button>
                             <button class="length_btn btn_round">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
-                                <!-- <div class="length_feet">(10 ft)</div> -->
                                 <input class="length_number" id="input_output" data-input="output" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
@@ -423,6 +423,7 @@
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
                         </div>
+                        <div class="length_feet">(10 ft)</div>
                     </div>
 
                     <div class="length_row large border_top flex_hide" data-length-row="input">
@@ -449,6 +450,7 @@
                                 </div>
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
+                            <div class="length_feet">(10 ft)</div>
                         </div>
                     </div>
 
