--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -348,7 +348,7 @@
                             <div class="length_row_segment">Total Cable Length</div>
                         </div>
                         <div class="input_wrapper">
-                            <button class="padlock_btn btn_round flex_hide" data-padlock="total">
+                            <button class="padlock_btn btn_round flex_hide" data-padlock="total" label="Lock Button">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g data-padlock-svg="total" class="padlock active">
                                     <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
@@ -358,8 +358,8 @@
                                 </svg>       
                             </button>
                             <button class="length_btn btn_round">-1ft</button>
-                            <div class="number_wrapper active" data-number-wrapper>
-                                <input class="length_number active" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36"> 
+                            <div class="number_wrapper active" data-number-wrapper="total">
+                                <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
                                     <div class="increment">+</div>
@@ -368,13 +368,13 @@
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
                         </div>
+                        <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="total">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="total">3.05</span> M</div>
                     </div>
 
                     <div class="length_row large border_top flex_hide" data-length-row="output">
                         <div class="title_wrapper">
                             <div class="length_row_segment">Output Length - <span class="inline_ratio" data-inline_ratio="output">100%</span></div>
                         </div>
-                        <div class="length_feet">(10 ft)</div>
                         <div class="input_wrapper">
                             <button class="padlock_btn btn_round" data-padlock="output">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -396,6 +396,7 @@
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
                         </div>
+                        <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="output">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="output">3.05</span> M</div>
                     </div>
 
                     <div class="length_row large border_top flex_hide" data-length-row="center">
@@ -423,7 +424,7 @@
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
                         </div>
-                        <div class="length_feet">(10 ft)</div>
+                        <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="center">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="center">3.05</span> M</div>
                     </div>
 
                     <div class="length_row large border_top flex_hide" data-length-row="input">
@@ -450,63 +451,32 @@
                                 </div>
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
-                            <div class="length_feet">(10 ft)</div>
                         </div>
+                        <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="input">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="input">3.05</span> M</div>
                     </div>
 
-                    <!-- <div class="length_section_wrapper">
-                        <div class="length_row small border_right" id="input_length_section"> 
-                            <div class="title_wrapper">
-                                <div class="length_row_segment">Input Length - Inches</div>
-                            </div>
-                            <div class="input_wrapper">
-                                <button class="padlock_btn btn_round" data-padlock="input">
-                                    <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <g data-padlock-svg="input" class="padlock">
-                                        <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
-                                        <rect class="lock_body" x="1" y="21" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
-                                        <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
-                                        </g>
-                                    </svg>       
-                                </button>
-                                <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36">                  
-                                <button class="length_btn btn_round">-1ft</button>
-                                <button class="length_btn btn_round">+1ft</button>
-                            </div>
-                        </div>
-                        <div class="length_row small" id="output_length_section"> 
-                            <div class="title_wrapper">
-                                <div class="length_row_segment">Output Length - Inches</div>
-                            </div>
-                            <div class="input_wrapper">
-                                <button class="padlock_btn btn_round" data-padlock="output">
-                                    <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <g data-padlock-svg="output" class="padlock">
-                                        <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
-                                        <rect class="lock_body" x="1" y="21" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
-                                        <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
-                                        </g>
-                                    </svg>       
-                                </button>
-                                <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36">                  
-                                <button class="length_btn btn_round">-1ft</button>
-                                <button class="length_btn btn_round">+1ft</button>
-                            </div>
-                        </div>
-                    </div> 
-                    
-                    <div class="slidebar_wrapper border_top_bottom">
-                        <input type="range" id="slidebar" name="slidebar" min="0" max="36" step="1" value="0">
+                    <div class="radio_row border_top flex_hide" data-radio-row="Y">
+                        <div  class="radio_header">Optionally, you can set a fixed ratio for each length.</div>
+                        <div class="radio_segments">Output - Input</div>
+                        <select name="ratio" id="Ycable" class="radio_selector">
+                            <option value="none">None</option>
+                            <option value="0-100">0% - 100%</option>
+                            <option value="25-75">25% - 75%</option>
+                            <option value="50-50">50% - 50%</option>
+                            <option value="75-25">75% - 25%</option>
+                            <option value="100-0">100% - 0%</option>
+                        </select>
                     </div>
-                    <div class="ratio_wrapper">
-                        <button class="ratio_btn" data-ratio_btn="0">0%</button>
-                        <button class="ratio_btn" data-ratio_btn="25">25%</button>
-                        <button class="ratio_btn" data-ratio_btn="50">50%</button>
-                        <button class="ratio_btn" data-ratio_btn="75">75%</button>
-                        <button class="ratio_btn" data-ratio_btn="100">100%</button>
-                    </div>-->
+                    <div class="radio_row border_top flex_hide" data-radio-row="X">
+                        <div  class="radio_header">Optionally, you can set a fixed ratio for each length.</div>
+                        <div class="radio_segments">Output - Center - Input</div>
+                        <select name="ratio" id="Ycable" class="radio_selector">
+                            <option value="none">None</option>
+                            <option value="Min-Min-Max">Min - Min - Max</option>
+                            <option value="25-50-25">25% - 50% - 25%</option>
+                        </select>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
