--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -362,8 +362,8 @@
                                 <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment">+</div>
-                                    <div class="increment">-</div>
+                                    <div class="increment" data-increment="total">+</div>
+                                    <div class="increment" data-decrement="total">-</div>
                                 </div>
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
@@ -390,8 +390,8 @@
                                 <input class="length_number" id="input_output" data-input="output" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment">+</div>
-                                    <div class="increment">-</div>
+                                    <div class="increment" data-increment="output">+</div>
+                                    <div class="increment" data-decrement="outptu">-</div>
                                 </div>
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
@@ -418,8 +418,8 @@
                                 <input class="length_number" id="input_center" data-input="center" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment">+</div>
-                                    <div class="increment">-</div>
+                                    <div class="increment" data-increment="center">+</div>
+                                    <div class="increment" data-decrement="center">-</div>
                                 </div>
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
@@ -446,8 +446,8 @@
                                 <input class="length_number" id="input_input" data-input="input" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment">+</div>
-                                    <div class="increment">-</div>
+                                    <div class="increment" data-increment="input">+</div>
+                                    <div class="increment" data-decrement="input">-</div>
                                 </div>
                             </div>                                       
                             <button class="length_btn btn_round">+1ft</button>
