--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -357,16 +357,16 @@
                                     </g>
                                 </svg>       
                             </button>
-                            <button class="length_btn btn_round">-1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="decrement" data-change_amount="10">-1ft</button>
                             <div class="number_wrapper active" data-number-wrapper="total">
                                 <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment" data-increment="total">+</div>
-                                    <div class="increment" data-decrement="total">-</div>
+                                    <div class="increment" data-increment="total" data-length-direction="increment" data-change_amount="1">+</div>
+                                    <div class="increment" data-decrement="total" data-length-direction="decrement" data-change_amount="1">-</div>
                                 </div>
                             </div>                                       
-                            <button class="length_btn btn_round">+1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="increment" data-change_amount="10">+1ft</button>
                         </div>
                         <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="total">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="total">3.05</span> M</div>
                     </div>
@@ -385,16 +385,16 @@
                                     </g>
                                 </svg>       
                             </button>
-                            <button class="length_btn btn_round">-1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="decrement" data-change_amount="10">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
                                 <input class="length_number" id="input_output" data-input="output" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment" data-increment="output">+</div>
-                                    <div class="increment" data-decrement="outptu">-</div>
+                                    <div class="increment" data-increment="output" data-length-direction="increment" data-change_amount="1">+</div>
+                                    <div class="increment" data-decrement="outptu" data-length-direction="decrement" data-change_amount="1">-</div>
                                 </div>
                             </div>                                       
-                            <button class="length_btn btn_round">+1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="increment" data-change_amount="10">+1ft</button>
                         </div>
                         <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="output">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="output">3.05</span> M</div>
                     </div>
@@ -413,16 +413,16 @@
                                     </g>
                                 </svg>       
                             </button>
-                            <button class="length_btn btn_round">-1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="decrement" data-change_amount="10">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
                                 <input class="length_number" id="input_center" data-input="center" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment" data-increment="center">+</div>
-                                    <div class="increment" data-decrement="center">-</div>
+                                    <div class="increment" data-increment="center" data-length-direction="increment" data-change_amount="1">+</div>
+                                    <div class="increment" data-decrement="center" data-length-direction="decrement" data-change_amount="1">-</div>
                                 </div>
                             </div>                                       
-                            <button class="length_btn btn_round">+1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="increment" data-change_amount="10">+1ft</button>
                         </div>
                         <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="center">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="center">3.05</span> M</div>
                     </div>
@@ -441,16 +441,16 @@
                                     </g>
                                 </svg>       
                             </button>
-                            <button class="length_btn btn_round">-1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="decrement" data-change_amount="10">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
                                 <input class="length_number" id="input_input" data-input="input" type="number" min="0" max="100" step="1" value="36"> 
                                 <div class="length_inches">in</div>
                                 <div class="increment_wrapper">
-                                    <div class="increment" data-increment="input">+</div>
-                                    <div class="increment" data-decrement="input">-</div>
+                                    <div class="increment" data-increment="input" data-length-direction="increment" data-change_amount="1">+</div>
+                                    <div class="increment" data-decrement="input" data-length-direction="decrement" data-change_amount="1">-</div>
                                 </div>
                             </div>                                       
-                            <button class="length_btn btn_round">+1ft</button>
+                            <button class="length_btn btn_round" data-length-direction="increment" data-change_amount="10">+1ft</button>
                         </div>
                         <div class="alt_length">Feet: <span class="length_feet" data-alt_length-feet="input">10</span> ft | Meters: <span class="length_meters" data-alt_length-meters="input">3.05</span> M</div>
                     </div>
