--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -348,7 +348,7 @@
                             <div class="length_row_segment">Total Cable Length</div>
                         </div>
                         <div class="input_wrapper">
-                            <button class="padlock_btn btn_round flex_hide" data-padlock="total" label="Lock Button">
+                            <!-- <button class="padlock_btn btn_round flex_hide" data-padlock="total" label="Lock Button">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g data-padlock-svg="total" class="padlock active">
                                     <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
@@ -356,7 +356,7 @@
                                     <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
                                     </g>
                                 </svg>       
-                            </button>
+                            </button> -->
                             <button class="length_btn btn_round" data-length_change="total" data-length-direction="decrement" data-change_amount="12">-1ft</button>
                             <div class="number_wrapper active" data-number-wrapper="total">
                                 <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36"> 
@@ -376,7 +376,7 @@
                             <div class="length_row_segment">Output Length - <span class="inline_ratio" data-inline_ratio="output">100%</span></div>
                         </div>
                         <div class="input_wrapper">
-                            <button class="padlock_btn btn_round" data-padlock="output">
+                            <!-- <button class="padlock_btn btn_round" data-padlock="output">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g data-padlock-svg="output" class="padlock">
                                     <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
@@ -384,7 +384,7 @@
                                     <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
                                     </g>
                                 </svg>       
-                            </button>
+                            </button> -->
                             <button class="length_btn btn_round" data-length_change="output" data-length-direction="decrement" data-change_amount="12">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
                                 <input class="length_number" id="input_output" data-input="output" type="number" min="0" max="100" step="1" value="36"> 
@@ -404,7 +404,7 @@
                             <div class="length_row_segment">Center Length - <span class="inline_ratio" data-inline_ratio="center">100%</span></div>
                         </div>
                         <div class="input_wrapper">
-                            <button class="padlock_btn btn_round" data-padlock="center">
+                            <!-- <button class="padlock_btn btn_round" data-padlock="center">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g data-padlock-svg="center" class="padlock">
                                     <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
@@ -412,7 +412,7 @@
                                     <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
                                     </g>
                                 </svg>       
-                            </button>
+                            </button> -->
                             <button class="length_btn btn_round" data-length_change="center" data-length-direction="decrement" data-change_amount="12">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
                                 <input class="length_number" id="input_center" data-input="center" type="number" min="0" max="100" step="1" value="36"> 
@@ -432,7 +432,7 @@
                             <div class="length_row_segment">Input Length - <span class="inline_ratio" data-inline_ratio="input">100%</span></div>
                         </div>
                         <div class="input_wrapper">
-                            <button class="padlock_btn btn_round" data-padlock="input">
+                            <!-- <button class="padlock_btn btn_round" data-padlock="input">
                                 <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g data-padlock-svg="input" class="padlock">
                                     <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
@@ -440,7 +440,7 @@
                                     <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
                                     </g>
                                 </svg>       
-                            </button>
+                            </button> -->
                             <button class="length_btn btn_round" data-length_change="input" data-length-direction="decrement" data-change_amount="12">-1ft</button>
                             <div class="number_wrapper" data-number-wrapper>
                                 <input class="length_number" id="input_input" data-input="input" type="number" min="0" max="100" step="1" value="36"> 
