--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -477,6 +477,32 @@
                         </select>
                     </div>
                 </div>
+                <div class="style_container">
+                    <div class="style_container_header">Cable Pattern And Material</div>
+                    <div class="style_row border_top" data-style-row="total">
+                        <div></div>
+                    </div>
+                    <div class="style_row border_top" data-style-row="output">
+                        <div></div>
+                    </div>
+                    <div class="style_row border_top" data-style-row="center">
+                        <div></div>
+                    </div>
+                    <div class="style_row border_top" data-style-row="input">
+                        <div></div>
+                    </div>
+                </div>
+
+                <div class="style_container">
+                    <div class="style_container_header">Cable Colors</div>
+                </div>
+
+                <div class="style_container">
+                    <div class="style_container_header">Connector Style</div>
+                </div>
+                <div class="style_container">
+                    <div class="style_container_header">Junction Style</div>
+                </div>
             </div>
         </div>
     </div>
